@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - new "check_dual_life_versions" option
 
 0.006     2013-09-11 04:03:33Z (Karen Etheridge)
           - new "check_module_versions" option
